# chat_inteligencia

./: .env  Dockerfile  README.md  chat.py  docker-compose.yml  logica.drawio  pyproject.toml  requirements.txt
backend/: app.py
database/: db.py  logs.db
frontend/: index.html  script.js
